--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -18,6 +18,8 @@ body{
 }
 .section h2{
     margin:50px 0px 30px 50px;
+    font-size:100px;
+    text-align:center
 }
 .section p{
     margin:20px 0px 0px 50px;
