--- a/stylesheets/stylesheet2.css
+++ b/stylesheets/stylesheet2.css
@@ -12,7 +12,14 @@ body{
     height:1000px;
     width:100%;
     float:left;
-    text-shadow:1px 1px 2px #f0f0f0;
+}
+.section .overview{
+    text-align:center;
+    background:black;
+    height:100%
+}
+.section h3{
+    color:white
 }
 .section h2{
     margin:125px 0px 30px 50px;
@@ -22,6 +29,13 @@ body{
 .section p{
     margin:20px 0px 0px 50px;
     width:1000px;
+}
+.section .myframe{
+    text-align:center
+}
+.section iframe{
+    height:700px;
+    width:80%;
 }
 .black{
     color:#fff;
