--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,8 +28,8 @@ body{
 
 }
 .brief{
-    margin: 40px 0px 20px 50px;
-    text-align: center;
+    margin: 40px auto 20px auto;
+    width: 500px;
 }
 .section .myframe{
     text-align:center
