--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,9 +14,15 @@ body{
     float:left;
 }
 .section .overview{
-    text-align:center;
     background:black;
     height:100%
+}
+.section .overview ul {
+    margin-left: 250px;
+}
+.section .overview li {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 .section h3{
     color:white;
@@ -50,6 +56,9 @@ body{
     list-style:none;
     margin:20px 0px 0px 550px;
 }
+.nav li {
+    color: #fff;
+}
 .black .nav ul li{
     float:left;
     padding:5px;
@@ -57,11 +66,9 @@ body{
 }
 .black .nav ul li a{
     display:block;
-    color:#222;
 }
 .black .nav ul li a:hover{
     text-decoration:none;
-    color:#222;
 }
 .white .nav ul li{
     float:left;
@@ -70,11 +77,9 @@ body{
 }
 .white .nav ul li a{
     display:block;
-    color:#222;
 }
 .white .nav ul li a:hover{
     text-decoration:none;
-    color:#222;    
 }
 .section .btn{
     text-align:center
